--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,7 +2,7 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "nb-tsc-watch",
+            "label": "tsc-watch",
             "type": "typescript",
             "tsconfig": "tsconfig.json",
             "option": "watch",
