--- a/package.json
+++ b/package.json
@@ -5,15 +5,23 @@
   "main": "index.ts",
   "scripts": {
     "build": "tsc",
-    "start": "tsc && node ./build/src/index.js"
+    "start": "tsc && node ./build/index.js"
   },
-  "author": "Louis BERRYER",
+  "author": "Louis BERRYER <louisberryer@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "serialport": "^11.0.0"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "log-timestamp": "^0.3.0",
+    "path": "^0.12.7",
+    "serialport": "^11.0.0",
+    "socket.io": "^4.7.1",
+    "twig": "^1.16.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/node": "^20.3.2",
+    "@types/twig": "^1.12.9",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.5"
   }
